# betacraft-launcher

./: .clang-format  .clang-tidy  .classpath  .gitignore  .gitmodules  .project  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYING.md  README.md  betacraft-retro.pro  build.gradle  gradlew  java_repo.json  settings.gradle  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  gradle.yml
assets/: betacraft-osx.icns  betacraft.aps  betacraft.desktop  betacraft.icns  betacraft.policy  betacraft.rc
assets/lang/: Brazilian Portuguese.json  Estonian.json  Hungarian.json  Italian.json  Lithuanian.json  Polish (alternative).json  Polish (cyrillic).json  Polish.json  Russian.json  Simplified Chinese.json  Spanish.json  Toki Pona.json  Traditional Chinese.json
betacraft-wrapper/org/betacraft/: Addon.java  Classic12aWrapper.java  Classic15aWrapper.java  ClassicMPWrapper.java  ClassicWrapper.java  CommandLine.java  FkWrapper.java  Minecraft13w16a.java  PreClassicWrapper.java  PreClassicWrapper2.java  Sys.java  Wrapper.java  WrapperDetector.java
gradle/wrapper/: gradle-wrapper.properties
lang/: Brazilian Portuguese.json  English.json  German (cyrillic).json  German.json  Hungarian.json  Italian.json  Japanese.json  Lithuanian.json  Polish (alternative).json  Polish (cyrillic).json  Polish.json  Simplified Chinese.json  Toki Pona.json  Traditional Chinese.json  Ukrainian.json
lib/libtar/: libtar-arm64.dylib  libtar-x86_64.dylib  libtar.h
podmieniacz/org/betacraft/podmieniacz/: Main.java
src/: CMakeLists.txt
src/core/: Account.c  Account.h  AppleExclusive.c  AppleExclusive.h  AssetIndex.c  AssetIndex.h  AuthMicrosoft.c  AuthMicrosoft.h  AuthMojang.c  AuthMojang.h  Betacraft.c  Betacraft.h  CMakeLists.txt  Constants.h  Discord.c  Discord.h  FileSystem.c  FileSystem.h  Game.c  Game.h  Instance.c  Instance.h  JavaInstallations.c  JavaInstallations.h  JsonExtension.c  JsonExtension.h  Logger.c  Logger.h  Mod.c  Mod.h  Network.c  Network.h  ProcessHandler.c  ProcessHandler.h  Settings.c  Settings.h  StringUtils.c  StringUtils.h  Update.c  Update.h  (+6 more)
src/gui/: Thumbs.db
src/icons/: Thumbs.db
src/main/app/: BetaCraft Launcher  Info.plist  PkgInfo  icon.icns
src/main/java/org/betacraft/: Addon.java  Classic12aWrapper.java  Classic15aWrapper.java  ClassicMPWrapper.java  ClassicWrapper.java  CommandLine.java  FkWrapper.java  Minecraft13w16a.java  PreClassicWrapper.java  PreClassicWrapper2.java  Wrapper.java
src/main/java/org/betacraft/launcher/: Addon.java  AuthWindow.java  AwaitingMSALogin.java  AwaitingOperation.java  BC.java  BCPrintStream.java  BottomPanel.java  BrowserWindow.java  Cert.java  ConsoleLogFrame.java  DownloadFrame.java  DownloadResult.java  InfoPanel.java  Instance.java  InstanceList.java  InstanceSettings.java  Lang.java  LanguageElement.java  Launcher.java  ListenThread.java  Logger.java  LoginPanel.java  ModsRepository.java  OS.java  Release.java  ReleaseJson.java  SelectAddons.java  SelectServerVersion.java  SelectVersion.java  SimpleWebAddressFrame.java  StartThread.java  Util.java  VersionSorter.java  WebsitePanel.java  Window.java
src/main/java/pl/betacraft/auth/: Accounts.java  Authenticator.java  (+13 more)
src/me/kazu/betacraftlaunucher/: About.java  Launcher.java  Password.java  Window.java
src/org/apache/commons/exec/: CommandLine.java  DaemonExecutor.java  DefaultExecuteResultHandler.java  DefaultExecutor.java  ExecuteException.java  ExecuteResultHandler.java  ExecuteStreamHandler.java  ExecuteWatchdog.java  Executor.java  InputStreamPumper.java  LogOutputStream.java  OS.java  ProcessDestroyer.java  PumpStreamHandler.java  ShutdownHookProcessDestroyer.java  StreamPumper.java  TimeoutObserver.java  Watchdog.java
src/org/betacraft/launcher/: About.java  Addon.java  AlphaStub.java  BC.java  Background.java  BottomPanel.java  DownloadFrame.java  DownloadResult.java  DownloadThread.java  InfoPanel.java  Instance.java  InstanceList.java  InstanceSettings.java  Lang.java  Launcher.java  Logger.java  LoginPanel.java  ModsRepository.java  MojangLogging.java  OS.java  Opcje.java  Options.java  Pobieranie.java  Prerelease.java  Release.java  ReleaseJson.java  SelectAddons.java  SelectServerVersion.java  SelectVersion.java  Util.java  Version.java  WebsitePanel.java  Wersja.java  Window.java  Window2.java
src/org/betacraft/launcher/themes/: LinuxThemeSetter.java  WindowsThemeSetter.java
src/org/bukkit/plugin/java/: JavaPluginLoader.java  PluginClassLoader.java
src/tests/: AccountTests.c  BetacraftTests.c  CMakeLists.txt  FileSystemTests.c  InstanceTests.c  JavaInstallationsTests.c  ModTests.c  SettingsTests.c
src/ui/: AboutWidget.cpp  AboutWidget.h  Betacraft.cpp  Betacraft.h  BetacraftUI.cpp  BetacraftUI.h  CMakeLists.txt  ConsoleLogWidget.cpp  ConsoleLogWidget.h  MainWindow.cpp  MainWindow.h  assets.qrc  main.cpp
src/ui/accounts/: AccountListItemWidget.cpp  AccountListItemWidget.h  AccountListWidget.cpp  AccountListWidget.h  AddAccountMicrosoftWidget.cpp  AddAccountMicrosoftWidget.h  AddAccountMojangWidget.cpp  AddAccountMojangWidget.h  AddAccountWidget.cpp  AddAccountWidget.h
src/ui/core/: Instance.cpp  Instance.h
src/ui/instances/: AddInstanceWidget.cpp  AddInstanceWidget.h  InstanceEditAppearanceWidget.cpp  InstanceEditAppearanceWidget.h  InstanceEditArgumentsWidget.cpp  InstanceEditArgumentsWidget.h  InstanceEditServerWidget.cpp  InstanceEditServerWidget.h  InstanceEditVersionWidget.cpp  InstanceEditVersionWidget.h  InstanceEditWidget.cpp  InstanceEditWidget.h  InstanceListWidget.cpp  InstanceListWidget.h
src/ui/instances/mods/: InstanceEditModRepoWidget.cpp  InstanceEditModRepoWidget.h  InstanceEditModVersionsWidget.cpp  InstanceEditModVersionsWidget.h  InstanceEditModsWidget.cpp  InstanceEditModsWidget.h
src/ui/servers/: ServerListItemWidget.cpp  ServerListItemWidget.h  ServerListWidget.cpp  ServerListWidget.h
src/ui/settings/: SettingsGeneralWidget.cpp  SettingsGeneralWidget.h  SettingsJavaWidget.cpp  SettingsJavaWidget.h  SettingsWidget.cpp  SettingsWidget.h
theme/: Default.qss
(+113 files in other folders)
