project(Tests)

add_executable(FileSystemTests FileSystemTests.c)
add_executable(AccountTests AccountTests.c)
add_executable(SettingsTests SettingsTests.c)
add_executable(BetacraftTests BetacraftTests.c)
add_executable(InstanceTests InstanceTests.c)
add_executable(ModTests ModTests.c)
add_executable(JavaInstallationsTests JavaInstallationsTests.c)

target_link_libraries(FileSystemTests PUBLIC Core)
target_link_libraries(AccountTests PUBLIC Core)
target_link_libraries(SettingsTests PUBLIC Core)
target_link_libraries(BetacraftTests PUBLIC Core)
target_link_libraries(InstanceTests PUBLIC Core)
target_link_libraries(ModTests PUBLIC Core)
target_link_libraries(JavaInstallationsTests PUBLIC Core)

add_test(NAME FileSystemTests COMMAND FileSystemTests)
add_test(NAME AccountTests COMMAND AccountTests)
add_test(NAME SettingsTests COMMAND SettingsTests)
add_test(NAME BetacraftTests COMMAND BetacraftTests)
add_test(NAME InstanceTests COMMAND InstanceTests)
add_test(NAME ModTests COMMAND ModTests)
add_test(NAME JavaInstallationsTests COMMAND JavaInstallationsTests)